optimize Exact.det via XDouble changes